[package]
name = "reqwest-custom-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
base64 = "0.22.1"
http = "1.3.1"
log = "0.4.27"
percent-encoding = "2.3.1"
reqwest = "0.12.15"
system-configuration = "0.6.1"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
